<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/lyt_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:minHeight="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_symtoms"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="0.5"
                    android:background="#00BCD4"
                    android:gravity="center"
                    android:text="@string/symtoms"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/txt_solution"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="0.5"
                    android:background="#00BCD4"
                    android:gravity="center"
                    android:text="@string/solution"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/lyt_below"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/grey"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/txt_hospital_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/lyt_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_hospital_name"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/institute_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <CheckBox
                    android:id="@+id/facility1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:minHeight="30dp"
                    android:text=""
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/facility2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="30dp"
                    android:text=""
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/txt_make_booking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lyt_info"
                android:layout_alignParentBottom="true"
                android:background="#00BCD4"
                android:gravity="center"
                android:minHeight="40dp"
                android:text="@string/book_now"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


        </RelativeLayout>
    </LinearLayout>
</ScrollView>